# bot_zap

./: .gitignore  README.md  compose.yaml
node_project/: Dockerfile  main.js  package-lock.json  package.json
python_project/: Dockerfile  pyproject.toml
python_project/src/: app.py  prompt.py  settings.py
